<resources>
    <string name="app_name">RPGQuiz</string>
    <!--First Screen MainActivity Strings-->
    <string name="game_text">RPG Quiz</string>
    <string name="start_button">Start</string>
    <string name="help_button">Help</string>
    <string name="language_button">Language</string>
    <!--HelpActivity Strings-->
    <string name="introduction">Welcome to RPG Quiz, a written RPG where you\'ll be confronted to different situations and
        will have to make tough choices. You cannot go back. Using the back key will undo all your progress. Closing the app as well.
    </string>
    <!--Upcoming questions Strings-->
    <string name="questionNumberOne">You wake up in a cold stone room. You don\'t remember what brought you here. You look around for a way out. You
    see two doors. One on your left and the other right in front of you. Which do you go through?</string>
    <string name="questionName">What\'s your character\'s name?</string>
    <string name="questionPersonality">What\'s your character\'s personality?</string>
    <string name="checkBoxAnswer1">Funny</string>
    <string name="checkBoxAnswer2">Honest</string>
    <string name="checkBoxAnswer3">Crazy</string>
    <string name="checkBoxAnswer4">Charming</string>
    <string name="checkBoxAnswer5">Stupid</string>
    <string name="checkBoxAnswer6">Determined</string>
    <string name="radioButtonChoice1MainActivity">I\'ll take the one on the left.</string>
    <string name="radioButtonChoice2MainActivity">Let\'s go through the front door.</string>
    <string name="submitButton">Submit</string>
    <!--Second Activity Strings-->
    <string name="questionActivity2">You open the door that was to your left. You enter and suddenly you fall into a pit. The ground has collapsed.
        Fortunately, you fell into some sand and you\'re unharmed. You observe your surroundings and come to the conclusion
    that you can climb back to the door. You also see a shiny object, buried in the sand. You decide to&#8230;</string>
    <string name="radioButtonChoice1SecondActivity">Climb to the door. I need to get out of here! </string>
    <string name="radioButtonChoice2SecondActivity">Shiny means valuable. We can always go back after that.</string>
    <!--Third Activity Strings -->
    <string name="questionActivity3">You came in the front door? Or maybe you touched a glittering object? Doesn\'t matter. You\'ve forgotten
        why you\'re here again. Only two choices can be made.</string>
    <string name="radioButtonChoice1ThirdActivity">Go back to the main room you started in</string>
    <string name="radioButtonChoice2ThirdActivity">Go in the corner to meditate</string>
    <!--Fourth Activity Strings -->
    <string name="questionActivity4">You realize that whatever you do, nothing changes. You can\'t escape. You\'re stuck, time to make a choice.</string>
    <string name="radioButtonChoice1FourthActivity">Go through the door on the on the left</string>
    <string name="radioButtonChoice2FourthActivity">Touch the shiny object</string>
    <string name="radioButtonChoice3FourthActivity">Go to the main room</string>
    <string name="radioButtonChoice4FourthActivity">Wait here and stay</string>

    <!--Levels-->
    <string name="initialLevel">Level 1 \&#8211; 1</string>

    <!--Community Menu-->
    <string name="goBack">Back</string>
    <string name="mainTextIntro">This APP is the work of the following users:</string>

    <!--Name of Users that contributed to the project & stuff related-->
    <string name="mainTextList">Main Idea</string>
    <string name="idea">Stanislas Mihaljcuk(shoxtrem)</string>
    <string name="contribution">Contributors</string>
    <string name="userTest">TEST</string>

    <string name="user1">Fabien Boismoreau (Bwaim)</string>
    <string name="user2">Maria Leoveanu (maria.leoveanu)</string>
    <string name="user3">Fábio Gouveia (Fabio_Gouveia)</string>
    <string name="user4">Diogo Rodrigues (dfrodri)</string>
    <string name="user5">Marius Nicolae (bytao7mao)</string>
    <string name="user6">TEST6</string>
    <string name="user7">TEST7</string>
    <string name="user8">TEST8</string>
    <string name="user9">TEST9</string>
    <string name="user10">TEST10</string>
    <string name="user11">TEST11</string>
    <string name="user12">TEST12</string>
    <string name="user13">TEST13</string>
    <string name="user14">TEST14</string>
    <string name="user15">TEST15</string>
    <string name="user16">TEST16</string>
    <string name="user17">TEST17</string>
    <string name="user18">TEST18</string>
    <string name="user19">TEST19</string>
    <string name="user20">TEST20</string>

    <!--Language Menu-->
    <string name="arabic">Arabic</string>
    <string name="czech">Czech</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="hebrew">Hebrew</string>
    <string name="italian">Italian</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="turkish">Turkish</string>

    <string name="selectLanguage">Choose your language</string>

</resources>
