<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.example.android.rpgquiz.ThirdActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/questionActivity4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp" />


        <RadioGroup
            android:id="@+id/choose_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <RadioButton
                android:id="@+id/first_choice_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonChoice1FourthActivity" />

            <RadioButton
                android:id="@+id/second_choice_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonChoice2FourthActivity" />

            <RadioButton
                android:id="@+id/third_choice_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonChoice3FourthActivity"/>

            <RadioButton
                android:id="@+id/fourth_choice_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonChoice4FourthActivity"/>

        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/submitButton" />
    </LinearLayout>
</ScrollView>